# Practise-Agent-Kits

crawler/arxiv_crawler/: Readme.md  arxiv_daily.py  requirements.txt
crawler/arxiv_crawler/output/: output.md  papers.json
crawler/xhs-Crawler/: README.md  client.py  core.py  mcp_server.py  run_crawler_cli.py
middleware/ContentWriting/: README.md  content_writer_cli.py  mcp_server.py
middleware/DataAnalysis/: README.md  analyze_data_cli.py  mcp_server.py
middleware/ImageGeneration/: README.md  image_gen_cli.py  mcp_server.py  pyproject.toml
middleware/generate_report/: README.md  main.py  project_description.md  pyproject.toml
middleware/generate_report/outputs/: hotspot_analysis-20251214-142849.md  memes-20251213-194040.md  memes-20251214-142602.md  memes-20251214-143040.md  public_reaction-20251214-144218.md  zhihu_daily-20251214-142734.md
middleware/generate_report/scripts/: connect_to_sql.py
publisher/xhs-publisher/: README.md  mcp_server.py  run_publish_cli.py
publisher/xhs-publisher/src/xiaohongshu/: client.py
publisher/xhs-publisher/src/xiaohongshu/components/: content_filler.py
