[project]
name = "mcp-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.3",
    "mcp>=1.23.3",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pilmoji>=2.0.4",
    "requests>=2.32.5",
]
